[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.35.0", features = ["full"] }
dotenv = "0.15.0"
serde = "1.0.193"